Scrapped SFML in favor of GLFW; GLFW is mostly integrated in terms of functionality. This is a working checkpoint commit.
-Now uses a very small and easy to use PNG loading library called LodePNG.
-Planning to integrate FreeType 2 as a replacement for SFML's font rendering stuff.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-/obj
-/ipch
-/x64
-/x32
-/Win32
-/Win64
-/resdev
+obj/
+ipch/
+x64/
+x32/
+Win32/
+Win64/
+resdev/
+libraries/
 *.sdf
 *.opensdf
 *.suo
